2004-09-19  Christian Ruppert <arc@users.sf.net>
	* doc/icons: added directory with latex2html navigation icons.
	* doc/l2h.conf: modified settings for documentation to be more
	  similar to ude web page.
	* doc/manual.tex: some minor updates.
	* uwm/settings_global_list.h: removed obsolete hex menu center
	  coordinate options.
	* uwm/winmenumenu.c: small bugfix.

2004-09-19  Christian Ruppert <arc@users.sf.net>
	* uwm/workspaces.c(SetWSBackground): fixed segfault in case no
	  background image is defined for a workspace.
	* uwm/special.c(MyOpen): added error treatment in case we can't
	  open a pipe (return fopen).
	* uwm/confparse.tab.y: implemented FILE functionality.
	* uwm/confparse.tab.y, uwm/confparse.lex.l, uwm/confparse.h:
	  implemented PIPE functionality.
	* doc/manual.tex: Started documentation of new config file format.
	* uwm/ude_config_consts.h: removed unused defines.

2004-09-09  Christian Ruppert <arc@users.sf.net>
	* uwm/handlers.c(InitHandlers): uwm now stops at initialisation in
	  case no shapes extension is found.
	* uwm/special.c(CheckCPP): slightly modified preprocessor test to check
	  if cpp takes -D command line options.

2004-09-02  Christian Ruppert <arc@users.sf.net>
	* uwm/init.c, uwm/uwm.c: moved TheScreen.errout initialisation code
	  from InitUWM to an earlier point in main.
	* uwm/special.c(CheckCPP): fixed broken pipe error in case we don't
	  find a preprocessor binary to execute.
	* uwm/special.c(CheckCPP): fixed broken pipe error in case we don't
	  find a /bin/sh binary to execute (although this might not be our
	  biggest problem in this case)

2004-08-09  Christian Ruppert <arc@users.sf.net>
	* uwm/init.c: removed exit() statements that were introduced for
	  debugging of the config file parsing system.
	* uwm/workspaces.c(SetWSBackground): fixed a small bug in the code
	  setting the background properties.
	* uwm/init.c(InitUWM, ICCCM_WM_Init): added selection of root window